--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,18 @@
     <artifactId>jenkins_test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <scm>
+        <connection>scm:git:https://github.com/gauravkumarmeena/jenkinstest</connection>
+        <developerConnection>scm:git:https://github.com/gauravkumarmeena/jenkinstest</developerConnection>
+        <url>https://github.com/gauravkumarmeena/jenkinstest.git</url>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>RELEASE</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>slf4j-jdk14</artifactId>-->
-            <!--<version>RELEASE</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
