--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <scm>
         <connection>scm:git:https://github.com/gauravkumarmeena/jenkinstest</connection>
         <developerConnection>scm:git:https://github.com/gauravkumarmeena/jenkinstest</developerConnection>
-        <url>https://github.com/gauravkumarmeena/jenkinstest.git</url>
+        <url>https://github.com/gauravkumarmeena/jenkinstest</url>
     </scm>
 
     <dependencies>
